--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,6 +1,14 @@
-<h1>Pages#home</h1>
-<p>Find me in app/views/pages/home.html.erb</p>
+<body style="background-color:oldlace;">
+<h1 style="font-family: Arial, Helvetica, sans-serif;font-size:80px;text-align:center; color:slategray">WELCOME</h1>
+<p style="font-family: Arial, Helvetica, sans-serif; font-size:20px;text-align:center; color:midnightblue">Need to send a text? You've come to the right place!</p>
 
 <%= form_tag("/sms/send", method: "post") do %>
 <!-- add form elements here -->
+<form>
+    Enter your message: <br>
+    <input type="text" name="message"><br>
+    Phone Number:<br>
+    <input type="tel" name="usrtel"><br>
+    <input type="submit" value="Submit">
+</form>
 <% end %>
