--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -13,3 +13,77 @@
  *= require_tree .
  *= require_self
  */
+<!DOCTYPE html>
+<html>
+<head>
+<style>
+body {
+    background-color: aliceblue;
+}
+
+h1 {
+    color: lightslategray;
+    text-align: center;
+    font-family: Arial, Helvetica, sans-serif;
+}
+
+p {
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 20px;
+    color: 091540;
+}
+input[type=text], select {
+    width: 100%;
+    padding: 12px 20px;
+    margin: 8px 0;
+    display: inline-block;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    box-sizing: border-box;
+}
+input[type=tel] {
+	width: 100%;
+    padding: 12px 20px;
+    margin: 8px 0;
+    display: inline-block;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    box-sizing: border-box;
+}
+
+input[type=submit] {
+    width: 100%;
+    background-color: #686963;
+    color: white;
+    padding: 14px 20px;
+    margin: 8px 0;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+}
+
+input[type=submit]:hover {
+    background-color: #DB5461;
+}
+
+div {
+    border-radius: 5px;
+    background-color: #f2f2f2;
+    padding: 20px;
+}
+</style>
+</head>
+<body>
+
+<h1 style="font-family: Arial, Helvetica, sans-serif;font-size:80px;text-align:center; color:slategray">WELCOME</h1>
+<p style="font-family: Arial, Helvetica, sans-serif; font-size:20px;text-align:center; color:midnightblue">Need to send a text? You've come to the right place!</p>
+<form>
+    Enter your message: <br>
+    <input type="text" name="message"><br>
+    Phone Number:<br>
+    <input type="tel" name="usrtel"><br>
+    <input type="submit" value="Submit">
+</form>
+
+</body>
+</html>
