--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -9,6 +9,6 @@
     <input type="text" name="message"><br>
     Phone Number:<br>
     <input type="tel" name="usrtel"><br>
-    <input type="submit" value="Submit">
+    <input type="submit" value="SUBMIT">
 </form>
 <% end %>
