--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -33,6 +33,7 @@ p {
     color: 091540;
 }
 input[type=text], select {
+    font-family: Arial, Helvetica, sans-serif;
     width: 100%;
     padding: 12px 20px;
     margin: 8px 0;
@@ -42,6 +43,7 @@ input[type=text], select {
     box-sizing: border-box;
 }
 input[type=tel] {
+	font-family: Arial, Helvetica, sans-serif;
 	width: 100%;
     padding: 12px 20px;
     margin: 8px 0;
@@ -52,6 +54,7 @@ input[type=tel] {
 }
 
 input[type=submit] {
+    font-family: Arial, Helvetica, sans-serif;
     width: 100%;
     background-color: #686963;
     color: white;
