--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -13,10 +13,7 @@
  *= require_tree .
  *= require_self
  */
-<!DOCTYPE html>
-<html>
-<head>
-<style>
+
 body {
     background-color: aliceblue;
 }
@@ -25,16 +22,20 @@ h1 {
     color: lightslategray;
     text-align: center;
     font-family: Arial, Helvetica, sans-serif;
+    font-size: 80px;
 }
 
 p {
     font-family: Arial, Helvetica, sans-serif;
     font-size: 20px;
     color: 091540;
+    text-align: center;
+    font-style: italic
 }
-input[type=text], select {
+
+input[type=text] {
     font-family: Arial, Helvetica, sans-serif;
-    width: 100%;
+    width: 50%;
     padding: 12px 20px;
     margin: 8px 0;
     display: inline-block;
@@ -44,25 +45,26 @@ input[type=text], select {
 }
 input[type=tel] {
 	font-family: Arial, Helvetica, sans-serif;
-	width: 100%;
+	width: 50%;
     padding: 12px 20px;
     margin: 8px 0;
     display: inline-block;
     border: 1px solid #ccc;
     border-radius: 4px;
     box-sizing: border-box;
+    text-align: center;
 }
 
 input[type=submit] {
     font-family: Arial, Helvetica, sans-serif;
-    width: 100%;
+    width: 50%;
     background-color: #686963;
     color: white;
     padding: 14px 20px;
     margin: 8px 0;
     border: none;
     border-radius: 4px;
-    cursor: pointer;
+    cursor: default;
 }
 
 input[type=submit]:hover {
@@ -74,19 +76,9 @@ div {
     background-color: #f2f2f2;
     padding: 20px;
 }
-</style>
-</head>
-<body>
+span.formhead {
+    font-family: Arial, Helvetica, sans-serif;
+    width: 50%;
+}
 
-<h1 style="font-family: Arial, Helvetica, sans-serif;font-size:80px;text-align:center; color:slategray">WELCOME</h1>
-<p style="font-family: Arial, Helvetica, sans-serif; font-size:20px;text-align:center; color:midnightblue">Need to send a text? You've come to the right place!</p>
-<form>
-    Enter your message: <br>
-    <input type="text" name="message"><br>
-    Phone Number:<br>
-    <input type="tel" name="usrtel"><br>
-    <input type="submit" value="Submit">
-</form>
 
-</body>
-</html>
