--- a/app/views/pages/sms.html.erb
+++ b/app/views/pages/sms.html.erb
@@ -1,2 +1,2 @@
-<h1>Pages#sms</h1>
-<p>Find me in app/views/pages/sms.html.erb</p>
+<h1> THANK YOU</h1>
+<p>Your message "<%=@message%>" has been sent to <%=@phone%>.</p>
