--- a/app/views/pages/sms.html.erb
+++ b/app/views/pages/sms.html.erb
@@ -1,2 +1,4 @@
 <h1> THANK YOU!</h1>
-<p>Your message "<%=@message%>" has been sent to <%=@phone%>.</p>
+<p>Your message "<%=@textmessage%>" has been sent to <%=@phone%>.</p>
+<br>
+<center><iframe src="//giphy.com/embed/3boPPdHk2ueo8?hideSocial=true" width="480" height="270" frameBorder="0" class="giphy-embed" allowFullScreen></iframe></center>
